fix z-index

--- a/style/styles.css
+++ b/style/styles.css
@@ -138,7 +138,8 @@ button:hover {
 }
 
 .left-button,
-.right-button {
+.right-button,
+.button {
   z-index: 2;
 }
 
